--- a/_posts/2019-03-22-Git.md
+++ b/_posts/2019-03-22-Git.md
@@ -7,7 +7,7 @@ date:   2019-03-22 10:33:00 +0800
 
 categories: Git
 
-tag: Git入门
+tag: Git
 ---
 
 ## Git介绍
@@ -20,6 +20,8 @@ Mac OS可直接通过安装Xcode的CLI完成安装
 ### 添加文件到仓库
 1. `git add readme.txt`
 2. `git commit -m "wrote a readme file"`
+
+<!-- more -->
 
 ### 查看历史日志
 #### 版本日志
