--- a/_posts/2019-07-06-素数.md
+++ b/_posts/2019-07-06-素数.md
@@ -11,7 +11,10 @@ tag: 算法
 ---
 
 ## 素性测试
-判断一个数n是否为素数，最直接的办法是按照定义判断，依次看$2,3,\cdots,n-1$能否整除n,若能整除则为合数，都不能整除则为素数,算法时间复杂度为 $O(n)$。
+若整数$n ( n > 1)$只有1和n两个因数，则n为素数。
+
+### 试除法
+判断一个数n是否为素数，最直接的办法是按照定义判断，依次看$2,3,\cdots,n-1$能否整除n,若能整除则n为合数，都不能整除则n为素数,算法时间复杂度为 $O(n)$。
 
 ```c++
 // 素性测试
@@ -28,5 +31,79 @@ bool IsPrime(int n) {
 	}
 }
 ```
+
+若n为合数，则$\exists s \geq t \in N_{+} 且 s \geq t > 1$使得$n = s \times t$，于是有$t \leq \sqrt{n}$,也就是说合数n一定存在一个因数小于等于$\sqrt{n}$。
+因此我们只需要对$2,3,\cdots,\sqrt{n}$判断是否能整除n即可。因此上述算法时间复杂度可降为$O(\sqrt{n})$.
+
+```c++
+// 素性测试
+bool IsPrime(int n) {
+	if(n < 2) {
+		return false;
+	} else {
+		for(int i = 2; i * i <= n; i++) {
+			if(n % i == 0) {
+				return false;
+			}
+		}
+		return true;
+	}
+}
+```
+
+## 打印素数表
+### Eratosthenes筛法
+算法思想是用已知素数的倍数去过滤掉那些合数，算法复杂度为$O(n \log{\log n})$.
+
+```c++
+const int maxn = 100000;
+bool check[maxn];
+int prime[maxn];
+
+// Eratosthenes筛法打印小于等于n的素数表
+int Eratosthenes(int n) {
+	if(n < 2) {
+		return 0;
+	}
+	memset(check, false, sizeof(check));
+	int cnt = 0;
+	for(int i = 2; i <= n; i++) {
+		if(!check[i]) {
+			prime[++cnt] = i;
+			for(int j = 2*i; j <= n; j += i) {
+				check[j] = true;
+			}
+		}
+	}
+	return cnt;
+}
+```
+
+### Euler筛法
+Euler筛法也称线性筛法，时间复杂度为$O(n)$.
+
+```c++
+// Euler筛法
+int Euler(int n) {
+	if(n < 2) {
+		return 0;
+	}
+	memset(check, false, sizeof(check));
+	int cnt = 0;
+	for(int i = 2; i <= n; i++) {
+		if(!check[i]) {
+			prime[++cnt] = i;
+		}
+		for(int j = 1; j <= cnt && i * prime[j] <= n; j++) {
+			check[i * prime[j]] = true;
+			if(i % prime[j] == 0) {
+				break;
+			}
+		}
+	}
+	return cnt;
+}
+```
+
 
 <!-- more -->
