--- a/_posts/2019-07-06-素数.md
+++ b/_posts/2019-07-06-素数.md
@@ -3,9 +3,9 @@ layout: post
 
 title: 素数
 
-date:   2019-07-06 9:51:00 +0800
+date: 2019-07-06 9:51:00 +0800
 
-categories: 
+categories: 算法
 
 tag: 算法
 ---
@@ -19,35 +19,38 @@ tag: 算法
 ```c++
 // 素性测试
 bool IsPrime(int n) {
-	if(n < 2) {
-		return false;
-	} else {
-		for(int i = 2; i < n-1; i++) {
-			if(n % i == 0) {
-				return false;
-			}
-		}
-		return true;
-	}
+    if(n < 2) {
+        return false;
+    } else {
+        for(int i = 2; i < n-1; i++) {
+            if(n % i == 0) {
+                return false;
+            }
+        }
+        return true;
+    }
 }
 ```
 
-若n为合数，则$\exists s \geq t \in N_{+} 且 s \geq t > 1$使得$n = s \times t$，于是有$t \leq \sqrt{n}$,也就是说合数n一定存在一个因数小于等于$\sqrt{n}$。
+<!-- more -->
+
+若n为合数，则$\exists s \geq t \in N_{+} 且 s \geq t > 1$使得$n = st$，
+于是有$t \leq \sqrt{n}$,也就是说合数n一定存在一个因数小于等于$\sqrt{n}$。
 因此我们只需要对$2,3,\cdots,\sqrt{n}$判断是否能整除n即可。因此上述算法时间复杂度可降为$O(\sqrt{n})$.
 
 ```c++
 // 素性测试
 bool IsPrime(int n) {
-	if(n < 2) {
-		return false;
-	} else {
-		for(int i = 2; i * i <= n; i++) {
-			if(n % i == 0) {
-				return false;
-			}
-		}
-		return true;
-	}
+    if(n < 2) {
+        return false;
+    } else {
+        for(int i = 2; i * i <= n; i++) {
+            if(n % i == 0) {
+                return false;
+            }
+        }
+        return true;
+    }
 }
 ```
 
@@ -62,20 +65,20 @@ int prime[maxn];
 
 // Eratosthenes筛法打印小于等于n的素数表
 int Eratosthenes(int n) {
-	if(n < 2) {
-		return 0;
-	}
-	memset(check, false, sizeof(check));
-	int cnt = 0;
-	for(int i = 2; i <= n; i++) {
-		if(!check[i]) {
-			prime[++cnt] = i;
-			for(int j = 2*i; j <= n; j += i) {
-				check[j] = true;
-			}
-		}
-	}
-	return cnt;
+    if(n < 2) {
+        return 0;
+    }
+    memset(check, false, sizeof(check));
+    int cnt = 0;
+    for(int i = 2; i <= n; i++) {
+        if(!check[i]) {
+            prime[++cnt] = i;
+            for(int j = 2*i; j <= n; j += i) {
+                check[j] = true;
+            }
+        }
+    }
+    return cnt;
 }
 ```
 
@@ -85,23 +88,23 @@ Euler筛法也称线性筛法，时间复杂度为$O(n)$.
 ```c++
 // Euler筛法
 int Euler(int n) {
-	if(n < 2) {
-		return 0;
-	}
-	memset(check, false, sizeof(check));
-	int cnt = 0;
-	for(int i = 2; i <= n; i++) {
-		if(!check[i]) {
-			prime[++cnt] = i;
-		}
-		for(int j = 1; j <= cnt && i * prime[j] <= n; j++) {
-			check[i * prime[j]] = true;
-			if(i % prime[j] == 0) {
-				break;
-			}
-		}
-	}
-	return cnt;
+    if(n < 2) {
+        return 0;
+    }
+    memset(check, false, sizeof(check));
+    int cnt = 0;
+    for(int i = 2; i <= n; i++) {
+        if(!check[i]) {
+            prime[++cnt] = i;
+        }
+        for(int j = 1; j <= cnt && i * prime[j] <= n; j++) {
+            check[i * prime[j]] = true;
+            if(i % prime[j] == 0) {
+                break;
+            }
+        }
+    }
+    return cnt;
 }
 ```
 
