--- a/_posts/2019-07-13-单链表.md
+++ b/_posts/2019-07-13-单链表.md
@@ -364,6 +364,12 @@ void LinkList<T>::InputRear(const T &endTag) {
 }
 ```
 ### 示例
+测试数据test.data如下:
+
+```
+1 2 3 4 5 0
+1 2 3 4 5 0
+```
 ```c++
 #include <iostream>
 #include "LinkList.h"
