--- a/_posts/2019-07-14-循环链表.md
+++ b/_posts/2019-07-14-循环链表.md
@@ -14,6 +14,8 @@ tag: 数据结构
 * 概念：循环链表是一种特殊的单链表，区别在于它的表尾节点指向附加头结点（采用附加头结点可以统一空表与非空表的运算）。
 * 特点：只要知道表中任何一个节点，便可以遍历整个循环链表
 
+<!-- more -->
+
 ## C++实现
 ### 类定义
 ```c++
